--- a/index.html
+++ b/index.html
@@ -4,63 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Digital Resume</title>
+    <title>Hackify Cyber Tech - Digital Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Your Name</h1>
+    <div class="container">
+        <div class="header">
+            <img src="logo.jpg" alt="Hackify Cyber Tech" class="logo">
+            <h1>Hackify Cyber Tech</h1>
+            <p>Stay Safe, Stay Secure. Learn, Practice & Conquer.</p>
+        </div>
+        
+        <div class="profile">
+            <img src="profile-pic.jpg" alt="Your Profile Picture" class="profile-pic">
+            <h2>Your Name</h2>
             <p>Cybersecurity Enthusiast | Ethical Hacker | Bug Bounty Hunter</p>
         </div>
-    </header>
 
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Passionate about cybersecurity with hands-on experience in ethical hacking, penetration testing, and vulnerability assessment.</p>
-        </div>
-    </section>
-
-    <section id="skills">
-        <div class="container">
+        <div class="section">
             <h2>Skills</h2>
             <ul>
                 <li>Penetration Testing</li>
-                <li>Bug Bounty Hunting</li>
                 <li>Web Application Security</li>
+                <li>Vulnerability Analysis</li>
                 <li>Network Security</li>
-                <li>Python & Bash Scripting</li>
-                <li>Linux & Windows Security</li>
+                <li>Linux & Shell Scripting</li>
             </ul>
         </div>
-    </section>
 
-    <section id="projects">
-        <div class="container">
+        <div class="section">
             <h2>Projects</h2>
             <ul>
-                <li><strong>Project 1:</strong> Vulnerability Analysis Tool</li>
-                <li><strong>Project 2:</strong> Web Application Penetration Testing Report</li>
-                <li><strong>Project 3:</strong> Automated Bug Bounty Scanner</li>
+                <li><strong>Project 1:</strong> Web App Penetration Testing Tool</li>
+                <li><strong>Project 2:</strong> Cybersecurity Awareness Blog</li>
+                <li><strong>Project 3:</strong> Automated Vulnerability Scanner</li>
+                <li><strong>Project 4:</strong> Cyber Threat Hunting software</li>
+                <li><strong>Project 5:</strong> Bug Bounty Huntings specialise tool for Http header reading</li>
+                <li><strong>Project 6:</strong> Cybersecurity learning app for begginers</li>
             </ul>
         </div>
-    </section>
 
-    <section id="education">
-        <div class="container">
+        <div class="section">
             <h2>Education</h2>
             <ul>
-                <li>Diploma In Cybersecurity</li>
-                <li>Online courses: Ethical Hacker </li>
+                <li>Diploma in Cybersecurity (2024)</li>
+                <li>Ethical Hacking Training (Ec-Council)</li>
+                <li>Certified from ISC2 as a certifies cybersecurity</li>
+                <li>Aggregated from Google as Cybersecurity Professional </li>
             </ul>
         </div>
-    </section>
 
-    <footer>
-        <div class="container">
-            <p>Contact: shaktiprasad24675@email.com | GitHub: <a href="https://github.com/Kitsonmorag">Kitsonmorag</a></p>
+        <div class="footer">
+            <p>Find me on GitHub: <a href="https://github.com/kitsonmorag" target="_blank">kitsonmorag</a></p>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
