--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="d:\Shakti Personal\Portfolio\shakti prasad.jpg" alt="shakti logo" class="logo">
+            <img src="d:\Shakti Personal\Portfolio\shakti prasad.jpg" alt="shakti logo" class="logo"<img src="images/myimage.jpg" alt="Description of image">
+>
             <h1>Shakti Prasad Mahapatro</h1>
             <h3>Cybersecurity Analyst | Penetration Tester | Bug Hunter</h3>
         </div>
