--- a/index.html
+++ b/index.html
@@ -3,75 +3,206 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shakti Prasad Mahapatro - Digital Resume</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <title>Shakti Prasad Mahapatro - Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #0a3d62;
+            padding: 10px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .header .logo {
+            font-size: 24px;
+            font-weight: bold;
+            margin-left: 20px;
+        }
+
+        .header nav {
+            margin-right: 20px;
+        }
+
+        .header nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 18px;
+            position: relative;
+        }
+
+        .header nav a:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 3px;
+            background-color: #fff;
+            bottom: -5px;
+            left: 0;
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+        }
+
+        .header nav a:hover:before {
+            transform: scaleX(1);
+        }
+
+        .section {
+            padding: 100px 20px;
+        }
+
+        .home {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+            animation: fadeIn 2s;
+        }
+
+        .home img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            margin-bottom: 20px;
+            border: 5px solid #fff;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .home h1 {
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+
+        .home p {
+            font-size: 20px;
+            margin-bottom: 20px;
+        }
+
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .social-icons a {
+            color: #fff;
+            font-size: 24px;
+            margin: 0 10px;
+            text-decoration: none;
+            transition: transform 0.3s;
+        }
+
+        .social-icons a:hover {
+            transform: scale(1.1);
+        }
+
+        .about, .projects, .contact {
+            text-align: center;
+        }
+
+        .about h2, .projects h2, .contact h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        .about p, .projects p, .contact p {
+            font-size: 18px;
+            margin-bottom: 20px;
+            line-height: 1.6;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <img src="d:\Shakti Personal\Portfolio\shakti prasad.jpg" alt="shakti logo" class="logo"<img src="images/myimage.jpg" alt="Description of image">
->
-            <h1>Shakti Prasad Mahapatro</h1>
-            <h3>Cybersecurity Analyst | Penetration Tester | Bug Hunter</h3>
-        </div>
+
+    <header class="header">
+        <div class="logo">Portfolio</div>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
 
-    <section id="about">
+    <section id="home" class="home">
+        <img src="d:\Shakti Personal\Portfolio\shakti prasad.jpg" alt="Shakti Prasad Mahapatro">
+        <h1>Shakti Prasad Mahapatro</h1>
+        <p>Cybersecurity Analyst | Penetration Tester | Bug Hunter</p>
+        <div class="social-icons">
+            <a href="https://linkedin.com/in/shaktiprasad0119" target="_blank">LinkedIn</a>
+            <a href="https://github.com/your-github-profile" target="_blank">GitHub</a>
+            <a href="https://dev.to/shakti_prasadmahapatro_3" target="_blank">Dev</a>
+            <a href="https://bugcrowd.com/bugcrowd.com/morag" target="_blank">Bugcrowd</a>
+            <a href="https://twitter.com/MahapatroPrasad" target="_blank">Twitter</a>
+        </div>
+    </section>
+
+    <section id="about" class="section about">
         <h2>About Me</h2>
         <p>
-            To leverage my expertise in cybersecurity analysis and threat mitigation within a dynamic organization utilizing my skills in identifying vulnerabilities, implementing robust security measures, and staying ahead of emerging cyber threats to safeguard digital assets and ensure uninterrupted operations.
+            I am a dedicated and skilled Cybersecurity Analyst with expertise in incident response, threat mitigation, and vulnerability assessment. With hands-on experience in tools like Nmap, Wireshark, Nessus, and Metasploit, I specialize in penetration testing for web applications and Android systems.
+        </p>
+        <p>
+            I have obtained several certifications including the Google Cybersecurity Professional Certification, (ISC)² Certified Cybersecurity, and Ec-Council Ethical Hacking Essentials, among others. I am a quick learner with a strong work ethic, and I am passionate about continuously improving my skills to stay ahead of emerging cyber threats.
         </p>
     </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Cybersecurity Analysis: Incident response, threat mitigation, vulnerability assessment</li>
-            <li>Tools: Nmap, Wireshark, Nessus, Kali Linux, Metasploit, OWTF, OWASP, BEEF</li>
-            <li>Penetration Testing: Web application, Android</li>
-            <li>Security Measures: Identity and Access Management, malware detection</li>
-        </ul>
-    </section>
-
-    <section id="projects">
+    <section id="projects" class="section projects">
         <h2>Projects & Experience</h2>
-        <h3>Shadow Fox - Cybersecurity Intern (May 2024 - July 2024)</h3>
-        <p>Conducted security assessments and implemented security protocols to protect company assets. Hands-on experience with Nmap, Wireshark, and Metasploit.</p>
-        <p>Assisted in incident response and forensic analysis, helping to mitigate security breaches.</p>
-        <p>Gaines hands-on experience with tools like Nmap, Wireshark and Metasploit.</p>
-
-        <h3>Oasis - Web Application Penetration Testing Intern (March 2024 - May 2024)</h3>
-        <p>Performed web application vulnerability assessments using OWASP methodologies.</p>
-        <p>Executed penetration tests on various web application to identify and exploit security flaws.</p>
-        <p>Provided detailed reports with recommendations for remediations to improve applications security</p>
-
-        <h4>VIEH Cyber Threat Hunting ProjectDates of Project(January 2024 - February 2024)</h4>
-        <p>Led a projects focused and proactive cyber threat hunting to detect advanced persistent threats (APTS).</p>
-        <p>Utilized threat intelligence and hunting tools to identify malicious activity within networks.</p>
-        <p>Developed strategies to enhance threat detection and response capabilities.</p>
-
-        <h5>Prodigy Infotech Cybersecurity Intern Dates of Internship ( July 2024 – Sept 2024)</h5>
-        <p>Supported the cybersecurity team in monitoring and analyzing security events.</p>
-        <p>Assisted in the deployment of security solutions, including firewalls and intrusion detection systems (IDS).</p>
-        <p>Conducted research on emerging threats and provided insights for enhancing security measures.</p>
-        
-        <!-- Add more project details as needed -->
+        <p>
+            <strong>Cybersecurity Intern at Shadow Fox (May 2024 – July 2024):</strong><br>
+            Conducted security assessments and implemented security protocols to protect company assets. Assisted in incident response and forensic analysis, helping to mitigate security breaches.
+        </p>
+        <p>
+            <strong>Web Application Penetration Testing Intern at Oasis (March 2024 – May 2024):</strong><br>
+            Performed web application vulnerability assessments using OWASP methodologies. Executed penetration tests on various web applications to identify and exploit security flaws. Provided detailed reports with recommendations for remediations to improve application security.
+        </p>
+        <p>
+            <strong>Cyber Threat Hunting Project at VIEH (January 2024 – February 2024):</strong><br>
+            Led a project focused on proactive cyber threat hunting to detect advanced persistent threats (APTs). Utilized threat intelligence and hunting tools to identify malicious activity within networks. Developed strategies to enhance threat detection and response capabilities.
+        </p>
+        <p>
+            <strong>Cybersecurity Intern at Prodigy Infotech (July 2024 – Sept 2024):</strong><br>
+            Supported the cybersecurity team in monitoring and analyzing security events. Assisted in the deployment of security solutions, including firewalls and intrusion detection systems (IDS). Conducted research on emerging threats and provided insights for enhancing security measures.
+        </p>
     </section>
 
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li>B.Sc in Chemistry, T.S.D College, Berhampur University (2024)</li>
-            <li>Diploma in Cybersecurity, Alison (2024)</li>
-            <li>Higher Secondary, KSUB College, Bhanjanagar (2021)</li>
-            <li>HSC from- St Xavier High School Bhanjanagar Year of completion: 2018</li>
-        </ul>
+    <section id="contact" class="section contact">
+        <h2>Contact Me</h2>
+        <p>
+            <strong>Email:</strong> shaktiprasad24675@gmail.com<br>
+            <strong>Phone:</strong> +91 7609031589<br>
+            <strong>Location:</strong> Bhanjanagar, Odisha, India
+        </p>
     </section>
-    <footer>
-        <p>Stay Safe, Stay Secure.</p>
-        <p>Connect with me on <a href="https://linkedin.com/in/shaktiprasad0119" target="_blank">LinkedIn</a></p>
-    </footer>
+
 </body>
 </html>
-
