--- a/index.html
+++ b/index.html
@@ -61,6 +61,26 @@
         </p>
     </section>
 
+    <section id="education" class="section education"> <!-- New Education Section -->
+        <h2>Education</h2>
+        <p>
+            <strong>B.Sc in Chemistry</strong><br>
+            T.S.D College, Berhampur University, Odisha (2024)
+        </p>
+        <p>
+            <strong>Diploma in Cybersecurity</strong><br>
+            Alison (2024)
+        </p>
+        <p>
+            <strong>Higher Secondary (Physics, Chemistry, and Mathematics)</strong><br>
+            KSUB College, Bhanjanagar (2021)
+        </p>
+        <p>
+            <strong>High School</strong><br>
+            St Xavier High School, Bhanjanagar (2018)
+        </p>
+    </section>
+
     <section id="contact" class="section contact">
         <h2>Contact Me</h2>
         <p>
