--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
     </section>
 
-    <section id="education" class="section education"> <!-- New Education Section -->
+    <section id="education" class="section education"> 
         <h2>Education</h2>
         <p>
             <strong>B.Sc in Chemistry</strong><br>
