--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
         </p>
     </section>
 
-    <section id="education" class="section education"> 
+    <section class="about-education-wrapper">
+    <section id="about" class="section about">
+        <h2>About Me</h2>
+        <p>
+            I am a dedicated and skilled Cybersecurity Analyst with expertise in incident response, threat mitigation, and vulnerability assessment...
+        </p>
+    </section>
+
+    <section id="education" class="section education">
         <h2>Education</h2>
         <p>
             <strong>B.Sc in Chemistry</strong><br>
@@ -73,13 +81,14 @@
         </p>
         <p>
             <strong>Higher Secondary (Physics, Chemistry, and Mathematics)</strong><br>
-            KSUB College, Bhanjanagar (2021)
+            KSUB College, Bhanjanagar (2020)
         </p>
         <p>
             <strong>High School</strong><br>
             St Xavier High School, Bhanjanagar (2018)
         </p>
     </section>
+</section>
 
     <section id="contact" class="section contact">
         <h2>Contact Me</h2>
