--- a/index.html
+++ b/index.html
@@ -19,47 +19,26 @@
     </header>
 
     <section id="home" class="home">
-        <img src="d:/shakti prasad.jpg" alt="Shakti Prasad Mahapatro">
+        <img src="d:/Shakti Personal/Portfolio/shakti prasad.jpg" alt="Shakti Prasad Mahapatro">
         <h1>Shakti Prasad Mahapatro</h1>
         <p>Cybersecurity Analyst | Penetration Tester | Bug Hunter</p>
         <div class="social-icons">
             <a href="https://linkedin.com/in/shaktiprasad0119" target="_blank">LinkedIn</a>
-            <a href="https://github.com/Kitsonmorag" target="_blank">GitHub</a>
+            <a href="https://github.com/your-github-profile" target="_blank">GitHub</a>
+            <a href="https://dev.to/shakti_prasadmahapatro_3" target="_blank">Dev</a>
             <a href="https://bugcrowd.com/bugcrowd.com/morag" target="_blank">Bugcrowd</a>
             <a href="https://twitter.com/MahapatroPrasad" target="_blank">Twitter</a>
         </div>
     </section>
 
-    <section class="about-education-wrapper">
-        <section id="about" class="section about">
-            <h2>About Me</h2>
-            <p>
-                I am a dedicated and skilled Cybersecurity Analyst with expertise in incident response, threat mitigation, and vulnerability assessment. With hands-on experience in tools like Nmap, Wireshark, Nessus, and Metasploit, I specialize in penetration testing for web applications and Android systems.
-            </p>
-            <p>
-                I have obtained several certifications including the Google Cybersecurity Professional Certification, (ISC)² Certified Cybersecurity, and Ec-Council Ethical Hacking Essentials, among others. I am a quick learner with a strong work ethic, and I am passionate about continuously improving my skills to stay ahead of emerging cyber threats.
-            </p>
-        </section>
-
-        <section id="education" class="section education">
-            <h2>Education</h2>
-            <p>
-                <strong>B.Sc in Chemistry</strong><br>
-                T.S.D College, Berhampur University, Odisha (2024)
-            </p>
-            <p>
-                <strong>Diploma in Cybersecurity</strong><br>
-                Alison (2024)
-            </p>
-            <p>
-                <strong>Higher Secondary (Physics, Chemistry, and Mathematics)</strong><br>
-                KSUB College, Bhanjanagar (2020)
-            </p>
-            <p>
-                <strong>High School</strong><br>
-                St Xavier High School, Bhanjanagar (2018)
-            </p>
-        </section>
+    <section id="about" class="section about">
+        <h2>About Me</h2>
+        <p>
+            I am a dedicated and skilled Cybersecurity Analyst with expertise in incident response, threat mitigation, and vulnerability assessment. With hands-on experience in tools like Nmap, Wireshark, Nessus, and Metasploit, I specialize in penetration testing for web applications and Android systems.
+        </p>
+        <p>
+            I have obtained several certifications including the Google Cybersecurity Professional Certification, (ISC)² Certified Cybersecurity, and Ec-Council Ethical Hacking Essentials, among others. I am a quick learner with a strong work ethic, and I am passionate about continuously improving my skills to stay ahead of emerging cyber threats.
+        </p>
     </section>
 
     <section id="projects" class="section projects">
@@ -79,6 +58,26 @@
         <p>
             <strong>Cybersecurity Intern at Prodigy Infotech (July 2024 – Sept 2024):</strong><br>
             Supported the cybersecurity team in monitoring and analyzing security events. Assisted in the deployment of security solutions, including firewalls and intrusion detection systems (IDS). Conducted research on emerging threats and provided insights for enhancing security measures.
+        </p>
+    </section>
+
+    <section id="education" class="section education">
+        <h2>Education</h2>
+        <p>
+            <strong>B.Sc in Chemistry</strong><br>
+            T.S.D College, Berhampur University, Odisha (2024)
+        </p>
+        <p>
+            <strong>Diploma in Cybersecurity</strong><br>
+            Alison (2024)
+        </p>
+        <p>
+            <strong>Higher Secondary (Physics, Chemistry, and Mathematics)</strong><br>
+            KSUB College, Bhanjanagar (2020)
+        </p>
+        <p>
+            <strong>High School</strong><br>
+            St Xavier High School, Bhanjanagar (2018)
         </p>
     </section>
 
