--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home" class="home">
-        <img src="d:/Shakti Personal/Portfolio/shakti prasad.jpg" alt="Shakti Prasad Mahapatro">
+        <img src="shakti prasad.jpg" alt="Shakti Prasad Mahapatro">
         <h1>Shakti Prasad Mahapatro</h1>
         <p>Cybersecurity Analyst | Penetration Tester | Bug Hunter</p>
         <div class="social-icons">
