--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\shakti prasad.jpg" alt="">
+    <img draggable="false" class="tilt" src="assets/images/shakti prasad.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
