--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\anime hacker.jpeg" alt="">
+        <img draggable="false" class="tilt" src="assets/images/anime hacker.jpeg" alt="">
     </div>
     <div class="content">
         <h3>I'm Shakti</h3>
