--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\educat\sddefault.jpg" alt="">
+        <img draggable="false" src="assets/images/educat/sddefault.jpg" alt="">
         </div>
         <div class="content">
         <h3>Bachelor of Chemistry</h3>
