--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="fale" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\educat\alison 2.jpg" alt="">
+      <img draggable="fale" src="assets/images/educat/alison 2.jpg" alt="">
       </div>
       <div class="content">
       <h3>Diploma in cybersecurity</h3>
