--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="fale" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\educat\cdn_u7BmiG3WjZ0-mpLdNl9d1_DgQkBaBnIX.webp" alt="">
+      <img draggable="fale" src="assets/images/educat/ec-council.webp" alt="">
       </div>
       <div class="content">
       <h3>Certified Ethical Hacker (CEH)</h3>
