--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
    <div class="box">
       <div class="image">
-      <img draggable="fale" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\educat\ColegeGate.jpg" alt="">
+      <img draggable="fale" src="assets/images/educat/ColegeGate.jpg" alt="">
       </div>
       <div class="content">
       <h3>Secondary Education</h3>
