--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="fale" src="d:\Shakti Personal\Portfolio\harshkumar-portfolio-main\Shakti Portfolio\assets\images\educat\st xavier.jpg" alt="">
+      <img draggable="fale" src="assets/images/educat/st xavier.jpg" alt="">
       </div>
       <div class="content">
       <h3>High School</h3>
