--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> techoverflows</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in//shaktiprasad0119">shakti</a></h1>
 
 </section>
 <!-- footer section ends -->
