Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Security auditor</h2>
+          <h2>IT Specialist</h2>
         </div>
         <div class="desc">
-            <h3>escort</h3>
-            <p>June 24- present</p>
+            <h3>SBI General Insurance</h3>
+            <p>Dec 12 2024 to 07 Aug 2025</p>
         </div>
       </div>
     </div>
@@ -364,8 +364,8 @@
           <h2>Working</h2>
         </div>
         <div class="desc">
-            <h3>Bug Hunting</h3>
-            <p>Nov 2023 - present</p>
+            <h3>Sr executive Cybersecurity & IT Compliance</h3>
+            <p>Aug 2025- Oct 2025</p>
         </div>
       </div>
     </div>
@@ -373,11 +373,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Giving Coaching</h2>
+          <h2>Security Analyst</h2>
         </div>
         <div class="desc">
-            <h3>Hackify Cyber Tech institute</h3>
-            <p>June 24 - present</p>
+            <h3>Hackify Cybertech</h3>
+            <p>Oct 2025 - present</p>
         </div>
       </div>
     </div>
