--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Working</h2>
+          <h2>Sr executive Cybersecurity & IT Compliance</h2>
         </div>
         <div class="desc">
-            <h3>Sr executive Cybersecurity & IT Compliance</h3>
+            <h3>Anmol Industry</h3>
             <p>Aug 2025- Oct 2025</p>
         </div>
       </div>
@@ -509,4 +509,5 @@
 
 </body>
 </html>
+
 
