--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+    <audio id="bg-music" preload="auto" loop>
+  <source src="./assets/music/dhurandhar.mp3" type="audio/mpeg">
+</audio>
+
+<div id="music-control">🔊 Play Music</div>
+
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -512,3 +519,4 @@
 
 
 take this source code add the music and give it to me the eniterly code so i just copy and paste it in github so it going to work finely 
+
